// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render default correctly 1`] = `
<label class="fx-input">
  <!--v-if--><input class="fx-input_input" name="" type="text" inputmode="text" placeholder="" maxlength="140" value="">
  <!--v-if-->
  <!--v-if-->
</label>
`;

exports[`Input should render prop disabled=true correctly 1`] = `
<label class="fx-input disabled">
  <!--v-if--><input class="fx-input_input" name="" type="text" inputmode="text" disabled="" placeholder="" maxlength="140" value="">
  <!--v-if-->
  <!--v-if-->
</label>
`;

exports[`Input should render prop maxlength=200 correctly 1`] = `
<label class="fx-input">
  <!--v-if--><input class="fx-input_input" name="" type="text" inputmode="text" placeholder="" maxlength="200" value="">
  <!--v-if-->
  <!--v-if-->
</label>
`;

exports[`Input should render prop showClear=true correctly 1`] = `
<label class="fx-input">
  <!--v-if--><input class="fx-input_input" name="" type="text" inputmode="text" placeholder="" maxlength="140" value="">
  <fx-icon-stub class="fx-input_clear" style="display: none;"></fx-icon-stub>
  <!--v-if-->
</label>
`;
